<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_text"
            android:textSize="@dimen/abc_text_size_subhead_material"/>

        <TextView
            android:id="@+id/move_date_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_dummy_text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/move_activity_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_dummy_text"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/move_location_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_dummy_text"
            android:gravity="center_horizontal"/>

    </LinearLayout>

</LinearLayout>