<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:baselineAligned="false"
    android:background="@color/highlighted_text_material_dark">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/followed_user_profile_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/profile_img_text"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_plusone_medium_off_client"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/followed_activity_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checked_in_at_text"/>

        <TextView
            android:id="@+id/followed_checking_venue_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_dummy_text"/>

        <TextView
            android:id="@+id/followed_time_stamp_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_dummy_text"/>

    </LinearLayout>

</LinearLayout>