<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.hoh.android.venuelocator.ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <!--<TextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/profile_text"-->
            <!--android:gravity="center"-->
            <!--android:textSize="@dimen/abc_text_size_title_material"/>-->

        <ImageView
            android:id="@+id/user_profile_image_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:contentDescription="@string/profile_img_text"
            android:src="@drawable/ic_plusone_medium_off_client"/>

        <TextView
            android:id="@+id/user_profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/full_name_text"
            android:textSize="@dimen/abc_text_size_subhead_material"/>

        <TextView
            android:id="@+id/user_profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/email_text"
            android:textSize="@dimen/abc_text_size_subhead_material"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/following_text"
            android:gravity="center"
            android:textSize="@dimen/abc_text_size_title_material"/>

        <fragment
            android:name="com.hoh.android.venuelocator.UserFollowedFragment"
            android:id="@+id/leader_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout="@layout/fragment_user_followed" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/follow_more_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/button_material_light"
            android:text="@string/add_leader_btn"/>

    </LinearLayout>

</LinearLayout>
