<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:baselineAligned="false"
    android:layout_centerVertical="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/venue_actor_img_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/profile_img_text"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/recent_activity_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_dummy_text"/>

        <TextView
            android:id="@+id/recent_activity_time_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_dummy_text"/>

    </LinearLayout>

</LinearLayout>