<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:baselineAligned="false"
    android:gravity="center_vertical"
    android:layout_gravity="center_vertical">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_plusone_medium_off_client"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/full_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_name_text"
            android:textSize="@dimen/abc_text_size_subhead_material"/>

        <TextView
            android:id="@+id/email_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_text"
            android:textSize="@dimen/abc_text_size_subhead_material"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="5">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/unfollow_text"/>

    </LinearLayout>

</LinearLayout>